kubernetes/dd_daemonset_up/dd-agent-running.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dd-agent-running
  namespace: datadog
  labels:
    k8s-app: dd-agent-running
spec:
  selector:
    matchLabels:
      name: dd-agent-running
  template:
    metadata:
      labels:
        name: dd-agent-running
    spec:
      tolerations:
      - key: datadog
        effect: NoSchedule
      - key: datadog
        effect: NoExecute
      - key: test
        effect: NoSchedule
      serviceAccountName: api-access
      containers:
      - name: dd-agent-running
        image: jenksgibbons/dd-agent-running:v1
        imagePullPolicy: IfNotPresent
