kubernetes/dd_daemonset_up/kyverno-deny-deployment.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: deny-deployment
  annotations:
    policies.kyverno.io/title: Namespace Deployment Protection
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.9.0
    policies.kyverno.io/minversion: 1.9.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/description: >-
      Block deployments in the apps namespace.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: deny-deployment
      match:
        any:
        - resources:
            kinds:
            - "Deployment"
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: apps
      validate:
        message: "Deployment creation in the apps namespace is blocked by \
                  policy 'deny-deployment' until the Datadog agent is up."
        deny: {}
